src_old/objects/IntegrationLog__c.object
<CustomObject>
    <description>Integration Log stores logs for integration calls to outside systems.</description>
    <fields>
        <fullName>APIName__c</fullName>
        <description>An entry field that indicates the name of the API.</description>
        <inlineHelpText>The name of the API.</inlineHelpText>
        <label>API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BatchId__c</fullName>
        <description>An entry field that indicates the Batch ID number.</description>
        <inlineHelpText>The ID number of the batch</inlineHelpText>
        <label>Batch ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorMsg__c</fullName>
        <description>A field that indicates the error message.</description>
        <inlineHelpText>The error message</inlineHelpText>
        <label>Error Msg</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HttpRequest__c</fullName>
        <description>A field that indicates the Http Request.</description>
        <inlineHelpText>The http request</inlineHelpText>
        <label>HttpRequest</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HttpResponse__c</fullName>
        <description>A field that indicates the Http Response.</description>
        <inlineHelpText>The http response</inlineHelpText>
        <label>HttpResponse</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SentOn__c</fullName>
        <description>A field that indicates the date and time an Integration Log was sent.</description>
        <inlineHelpText>The date and time an integration log was sent.</inlineHelpText>
        <label>Sent On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>A field that indicates the status of the Integration Log.</description>
        <inlineHelpText>The status of the integration log</inlineHelpText>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>A field that indicates the URL of the Integration Log.</description>
        <inlineHelpText>The URL of the integraton log</inlineHelpText>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Integration Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APIName__c</columns>
        <columns>SentOn__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>RecordId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>